--- a/hudi-aws/pom.xml
+++ b/hudi-aws/pom.xml
@@ -43,6 +43,11 @@
         <!-- Hoodie -->
         <dependency>
             <groupId>org.apache.hudi</groupId>
+            <artifactId>hudi-client-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hudi</groupId>
             <artifactId>hudi-common</artifactId>
             <version>${project.version}</version>
         </dependency>
