--- a/pom.xml
+++ b/pom.xml
@@ -239,7 +239,7 @@
     <springboot.version>2.7.3</springboot.version>
     <spring.shell.version>2.1.1</spring.shell.version>
     <snappy.version>1.1.8.3</snappy.version>
-    <spark3.active>${spark3.2}${spark3.3}${spark3.4}${spark3.5}</spark3.active>
+    <spark31orEarlier>true</spark31orEarlier>
   </properties>
 
   <scm>
@@ -2545,6 +2545,7 @@
         <pulsar.spark.version>${pulsar.spark.scala12.version}</pulsar.spark.version>
         <skip.hudi-spark2.unit.tests>true</skip.hudi-spark2.unit.tests>
         <skipITs>true</skipITs>
+        <spark31orEarlier>false</spark31orEarlier>
       </properties>
       <modules>
         <module>hudi-spark-datasource/hudi-spark3.2.x</module>
@@ -2590,6 +2591,7 @@
         <pulsar.spark.version>${pulsar.spark.scala12.version}</pulsar.spark.version>
         <skip.hudi-spark2.unit.tests>true</skip.hudi-spark2.unit.tests>
         <skipITs>true</skipITs>
+        <spark31orEarlier>false</spark31orEarlier>
       </properties>
       <modules>
         <module>hudi-spark-datasource/hudi-spark3.3.x</module>
@@ -2636,6 +2638,7 @@
         <slf4j.version>2.0.6</slf4j.version>
         <skip.hudi-spark2.unit.tests>true</skip.hudi-spark2.unit.tests>
         <skipITs>true</skipITs>
+        <spark31orEarlier>false</spark31orEarlier>
       </properties>
       <modules>
         <module>hudi-spark-datasource/hudi-spark3.4.x</module>
@@ -2689,6 +2692,7 @@
         <slf4j.version>2.0.7</slf4j.version>
         <skip.hudi-spark2.unit.tests>true</skip.hudi-spark2.unit.tests>
         <skipITs>true</skipITs>
+        <spark31orEarlier>false</spark31orEarlier>
       </properties>
       <modules>
         <module>hudi-spark-datasource/hudi-spark3.5.x</module>
