refactor: Add Lombok annotations to hudi-common module (part 3)

--- a/hudi-common/pom.xml
+++ b/hudi-common/pom.xml
@@ -128,6 +128,7 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
+      <scope>provided</scope>
     </dependency>
 
     <!-- Logging -->
