chore: update collaborator list

--- a/.asf.yaml
+++ b/.asf.yaml
@@ -47,7 +47,7 @@ github:
     - rangareddy
     - deepakpanda93
     - cshuo
-    - PavithranRick
+    - HuangZhenQiu
     - linliu-code
     - vamsikarnika
     - rahil-c
