--- a/hudi-utilities/pom.xml
+++ b/hudi-utilities/pom.xml
@@ -234,6 +234,7 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
+      <scope>provided</scope>
     </dependency>
 
     <!-- Fasterxml -->
