upgrade lance version for new writer functionality

--- a/hudi-hadoop-common/pom.xml
+++ b/hudi-hadoop-common/pom.xml
@@ -160,7 +160,7 @@
     </dependency>
     <!-- Lance Core SDK -->
     <dependency>
-      <groupId>com.lancedb</groupId>
+      <groupId>org.lance</groupId>
       <artifactId>lance-core</artifactId>
     </dependency>
   </dependencies>
