--- a/pom.xml
+++ b/pom.xml
@@ -241,7 +241,7 @@
     <spring.shell.version>2.1.1</spring.shell.version>
     <snappy.version>1.1.10.7</snappy.version>
     <arrow.version>18.3.0</arrow.version>
-    <lance.version>0.39.0</lance.version>
+    <lance.version>1.0.2</lance.version>
     <lance.spark.connector.version>0.0.15</lance.spark.connector.version>
     <lance.spark.artifact>lance-spark-3.5_${scala.binary.version}</lance.spark.artifact>
     <lance.skip.tests>false</lance.skip.tests>
@@ -956,7 +956,7 @@
       </dependency>
       <!-- Lance Core SDK -->
       <dependency>
-        <groupId>com.lancedb</groupId>
+        <groupId>org.lance</groupId>
         <artifactId>lance-core</artifactId>
         <version>${lance.version}</version>
       </dependency>
@@ -965,6 +965,12 @@
         <groupId>com.lancedb</groupId>
         <artifactId>${lance.spark.artifact}</artifactId>
         <version>${lance.spark.connector.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>com.lancedb</groupId>
+            <artifactId>lance-core</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <!-- Apache Arrow -->
       <dependency>
