--- a/docker/compose/docker-compose_hadoop284_hive233_spark353_arm64.yml
+++ b/docker/compose/docker-compose_hadoop284_hive233_spark353_arm64.yml
@@ -20,12 +20,10 @@ services:
     hostname: namenode
     container_name: namenode
     environment:
-      - CLUSTER_NAME=hudi_hadoop284_hive232_spark353
+      - CLUSTER_NAME=hudi_hadoop284_hive233_spark353
     ports:
       - "50070:50070"
       - "8020:8020"
-      # JVM debugging port (will be mapped to a random port on host)
-      - "5005"
     env_file:
       - ./hadoop.env
     healthcheck:
@@ -39,14 +37,12 @@ services:
     container_name: datanode1
     hostname: datanode1
     environment:
-      - CLUSTER_NAME=hudi_hadoop284_hive232_spark353
+      - CLUSTER_NAME=hudi_hadoop284_hive233_spark353
     env_file:
       - ./hadoop.env
     ports:
       - "50075:50075"
       - "50010:50010"
-      # JVM debugging port (will be mapped to a random port on host)
-      - "5005"
     links:
       - "namenode"
       - "historyserver"
@@ -63,7 +59,7 @@ services:
     hostname: historyserver
     container_name: historyserver
     environment:
-      - CLUSTER_NAME=hudi_hadoop284_hive232_spark353
+      - CLUSTER_NAME=hudi_hadoop284_hive233_spark353
     depends_on:
       - "namenode"
     links:
@@ -98,11 +94,9 @@ services:
       - ./hadoop.env
     command: /opt/hive/bin/hive --service metastore
     environment:
-      SERVICE_PRECONDITION: "namenode:50070 hive-metastore-postgresql:5432"
+      - "SERVICE_PRECONDITION=namenode:50070 hive-metastore-postgresql:5432"
     ports:
       - "9083:9083"
-      # JVM debugging port (will be mapped to a random port on host)
-      - "5005"
     healthcheck:
       test: ["CMD", "nc", "-z", "hivemetastore", "9083"]
       interval: 30s
@@ -119,11 +113,9 @@ services:
     env_file:
       - ./hadoop.env
     environment:
-      SERVICE_PRECONDITION: "hivemetastore:9083"
+      - SERVICE_PRECONDITION=hivemetastore:9083
     ports:
       - "10000:10000"
-      # JVM debugging port (will be mapped to a random port on host)
-      - "5005"
     depends_on:
       - "hivemetastore"
     links:
@@ -142,8 +134,6 @@ services:
     ports:
       - "8080:8080"
       - "7077:7077"
-      # JVM debugging port (will be mapped to a random port on host)
-      - "5005"
     environment:
       - INIT_DAEMON_STEP=setup_spark
     links:
@@ -162,10 +152,8 @@ services:
       - sparkmaster
     ports:
       - "8081:8081"
-      # JVM debugging port (will be mapped to a random port on host)
-      - "5005"
     environment:
-      - "SPARK_MASTER=spark://sparkmaster:7077"
+      - SPARK_MASTER=spark://sparkmaster:7077
     links:
       - "hivemetastore"
       - "hiveserver"
@@ -197,8 +185,6 @@ services:
     image: apachehudi/hudi-hadoop_2.8.4-prestobase_0.271:latest
     ports:
       - "8090:8090"
-      # JVM debugging port (will be mapped to a random port on host)
-      - "5005"
     environment:
       - PRESTO_JVM_MAX_HEAP=512M
       - PRESTO_QUERY_MAX_MEMORY=1GB
@@ -239,8 +225,6 @@ services:
     image: apachehudi/hudi-hadoop_2.8.4-trinocoordinator_368:latest
     ports:
       - "8091:8091"
-      # JVM debugging port (will be mapped to a random port on host)
-      - "5005"
     links:
       - "hivemetastore"
     volumes:
@@ -254,8 +238,6 @@ services:
     depends_on: [ "trino-coordinator-1" ]
     ports:
       - "8092:8092"
-      # JVM debugging port (will be mapped to a random port on host)
-      - "5005"
     links:
       - "hivemetastore"
       - "hiveserver"
@@ -287,7 +269,7 @@ services:
       # JVM debugging port (mapped to 5006 on the host)
       - "5006:5005"
     environment:
-      - "SPARK_MASTER=spark://sparkmaster:7077"
+      - SPARK_MASTER=spark://sparkmaster:7077
     links:
       - "hivemetastore"
       - "hiveserver"
@@ -310,7 +292,7 @@ services:
     depends_on:
       - sparkmaster
     environment:
-      - "SPARK_MASTER=spark://sparkmaster:7077"
+      - SPARK_MASTER=spark://sparkmaster:7077
     links:
       - "hivemetastore"
       - "hiveserver"
