--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,8 @@
     <hadoop.version>2.10.2</hadoop.version>
     <hive.groupid>org.apache.hive</hive.groupid>
     <hive.version>2.3.4</hive.version>
+    <!-- hive.storage.version based on orc.spark.version -->
+    <hive.storage.version>2.6.0</hive.storage.version>
     <hive.parquet.version>1.10.1</hive.parquet.version>
     <hive.avro.version>1.8.2</hive.avro.version>
     <presto.version>0.273</presto.version>
@@ -2482,8 +2484,6 @@
         <hudi.spark.common.modules.1>hudi-spark2-common</hudi.spark.common.modules.1>
         <hudi.spark.common.modules.2/>
         <kafka.version>2.0.0</kafka.version>
-        <!-- hive.storage.version same as orc.spark.version-->
-        <hive.storage.version>2.6.0</hive.storage.version>
         <parquet.version>1.10.1</parquet.version>
         <orc.spark.version>1.6.0</orc.spark.version>
         <avro.version>1.8.2</avro.version>
